seumich/static/seumich/styles/main.scss
/* ... */
.student-class-site-list-table > tbody > tr {
    > th {
        width: 220px;
        vertical-align: middle;
    }
    > td {
        vertical-align: middle;
    }
}
.student-detail-left-menu {
    width: 25%;
    position: fixed;
    left: 0;
    height: 100%;
    background-color: $color_background_gray;
    overflow-y: scroll;
    /* Need to fix the scroll bug here for the left nav menu */
    margin-bottom: 100px;
    @include mobile {
         @include mobilemenu;
    }
}
.student-detail-left-menu-top {
    background-color: $color_student_detail_background;
    text-align: left;
    width: 100%;
}
.student-detail-main-menu {
    margin-left: -15px;
    margin-right: -15px;
    @include mobile {
         @include mobilemenu;
    }
}
.student-detail-main-menu-top {
    width: 100%;
    background-color: $color_student_detail_background;
    padding-left: $primary-padding;
    @include mobile {
        padding-left: 0;
    }
}
.student-detail-student-id {
    margin-bottom: 0;
    padding-left: $primary-padding;
    @include font($font_student_email_uniquename...);
}
.student-detail-student-email {
    margin-bottom: 0;
    padding-left: $primary-padding;
    padding-bottom: $primary-padding;
    text-decoration: underline;
    @include font($font_student_email_uniquename...);
}
.student-detail-student-email-link,
.student-detail-student-name-link {
    color: rgb(255, 255, 255);
    &:hover {
        color: rgb(255, 255, 255);
    }
}
.student-detail-left-menu-course-line p {
    vertical-align: middle;
    line-height: 60px;
    margin-bottom: 0;
    padding-left: $primary-padding;
    font-size: 20px;
    font-weight: bold;
    color: $color_nav_background;
}
.student-detail-left-menu-courses {
    min-height: 60px;
    border-bottom: 1px solid $color_active_gray;
    &:hover {
        cursor: pointer;
        background-color: $color_hover_gray;
    }
    h3 {
        width: 70%;
        margin-top: 16px;
        margin-bottom: $secondary-margin;
        padding-left: $primary-padding;
        display: inline-block;
        word-wrap: break-word;
        @include font($font_student_course_list_menu...);
    }
}
.student-detail-summary {
    width: 75%;
    margin-left: 25%;
    @include mobile {
        width: 100%;
        position: relative;
        margin: auto 0;
    }
}
.student-detail-main {
    width: 75%;
    @include mobile {
        width: 100%;
        position: relative;
        margin: auto 0;
        padding-left: 0;
    }
}
.student-detail-summary-content {
    margin-left: $secondary-margin;
    margin-right: $secondary-margin;
    @include mobile {
        margin-left: 0;
        margin-right: 0;
    }
}
.student-detail-data-source {
    margin-top: 10px;
}
.student-info {
    background-color: $color_hover_gray;
    padding: 0.75em;
    margin-bottom: 80px;
    p {
        display: inline;
    }
    @include mobile {
        margin-bottom: $secondary-margin;
    }
}
.advisor-names {
    margin-right: 0.4em;
}
.panel-default {
    display: none;
    @include mobile {
        display: block;
    }
}
.no-margin {
    margin-left: 0;
    margin-right: 0;
}
.student-detail-class-site-status {
    display: inline-block;
}
.feedback {
    margin: 0.5em;
    img {
        width: 25px;
        margin-right: 5px;
        margin-left: 5px;
    }
}
.footer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    .container-fluid {
        color: $color_active_gray;
        border-top: 1px solid $color_hover_gray;
        background-color: $color_nav_background;
        font-weight: 300;
        color: rgb(255, 255, 255);
        p.main-color-white {
            margin-top: 13px;
        }
    }
    @include desktop {
        padding-left: 0;
        padding-right: 0;
    }
}
.container-narrow > hr {
    margin: 30px 0;
}
.jumbotron {
    text-align: center;
    border-bottom: 1px solid $color_hover_gray;
    .btn {
        font-size: 21px;
        padding: 14px 24px;
    }
    @include desktop {
        border-bottom: 0;
    }
}
.nv-axislabel {
    @include chart {
        display: none;
    }
}
.container {
    @include desktop {
        max-width: 100% !important;
    }
}
.container-feedback {
    @include desktop {
        width: 50%;
    }
}
.student-class-site-list,
.student-detail-mobile {
    @include desktop {
        display: none;
    }
}
#student-search {
    @include desktop {
        width: 22em;
    }
    @include medium {
        width: 22em;
    }
    @include mobile {
        // Fix mobile input zoom
        &:focus, &:hover {
            font-size: 16px !important;
        }
    }
}
.open > .dropdown-menu {
    @include mobile {
        color: $color_active_gray;
    }
}
.student-class-site-table,
.student-detail-left-menu-detail {
    @include mobile {
        display: none;
    }
}
.student-detail-left-menu-detail {
    margin-bottom: 100px;
}
.table-responsive {
    @include mobile {
        border: none;
    }
}
.student-detail-summary-title {
    @include mobile {
        padding-left: 0;
    }
}
.navbar-fixed-bottom {
    @include mobile {
        position: relative;
    }
}
.mobile-inline {
    @include mobile {
        margin-bottom: $secondary-margin;
        display: inline-block;
    }
}
.class-site {
    @include mobile {
        width: 75%;
    }
}
.hide-small-grid {
    @include mobile {
        display: none;
    }
}
.status-icon {
    @include mobile {
        float: right;
    }
}
.panel-heading {
    @include mobile {
        padding: 15px;
    }
}
.assignment-table {
    @include mobile {
        margin-left: 0;
        > .container-fluid {
            padding: 0;
        }
    }
}
.footer-block,
.mobile-div {
    @include mobile {
        display: block;
    }
}
.navbar-toggle {
    @include mobile {
        background-color: $color_background_gray;
        display: block;
    }
}
.navbar-header {
    @include mobile {
        float: none;
    }
}
/* ... */

